feat: :sparkles: add data results and getting started documentation

--- a/docs/report/references.bib
+++ b/docs/report/references.bib
@@ -3,7 +3,7 @@
   url = {https://www.nsnam.org/docs/release/3.46/tutorial/html/index.html},
   urldate = {2025-10-14},
   year = {2019},
-  organization = {Nsnam.org}
+  organization = {Nsnam.org},
 }
 
 @misc{nsnam_2019_ns3,
@@ -11,7 +11,7 @@
   title = {ns-3},
   url = {https://www.nsnam.org/},
   year = {2019},
-  organization = {ns-3}
+  organization = {ns-3},
 }
 
 @article{ha_cubic,
@@ -30,5 +30,13 @@ abstract = {CUBIC is a congestion control protocol for TCP (transmission control
 journal = {SIGOPS Oper. Syst. Rev.},
 month = jul,
 pages = {64-74},
-numpages = {11}
+numpages = {11},
+}
+@misc{gh_code,
+  author = {JosoeSantos},
+  title = {GitHub - JosoeSantos/tcp-congestion-control},
+  url = {https://github.com/JosoeSantos/tcp-congestion-control},
+  urldate = {2025-11-02},
+  year = {2025},
+  organization = {GitHub}
 }
